[gd_scene load_steps=13 format=3 uid="uid://df1rucy3g6c40"]

[ext_resource type="Script" path="res://scipts/board.gd" id="1"]
[ext_resource type="Script" path="res://scipts/game.gd" id="1_yweq4"]
[ext_resource type="FontFile" uid="uid://brc816gdl87af" path="res://fonts/Roboto-Bold.ttf" id="2"]
[ext_resource type="Script" path="res://scipts/networking/Networking.gd" id="2_6dxgx"]
[ext_resource type="Script" path="res://restart_confirmation_popup.gd" id="2_hctff"]
[ext_resource type="Script" path="res://scipts/networking/Server.gd" id="3_xgba2"]
[ext_resource type="Script" path="res://scipts/main.gd" id="4"]
[ext_resource type="Script" path="res://scipts/networking/Client.gd" id="4_jies1"]
[ext_resource type="Script" path="res://scipts/strike.gd" id="5"]
[ext_resource type="Theme" uid="uid://dauqppu1iyvav" path="res://theme.tres" id="6"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Main" type="Node"]
script = ExtResource("4")

[node name="RestartConfirmation" type="PopupPanel" parent="."]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(303, 100)
always_on_top = true
script = ExtResource("2_hctff")

[node name="margins" type="MarginContainer" parent="RestartConfirmation"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="vbox" type="VBoxContainer" parent="RestartConfirmation/margins"]
layout_mode = 2

[node name="label" type="Label" parent="RestartConfirmation/margins/vbox"]
layout_mode = 2
size_flags_vertical = 6
text = "Would you like to restart the game?"

[node name="buttons" type="HBoxContainer" parent="RestartConfirmation/margins/vbox"]
layout_mode = 2

[node name="yes" type="Button" parent="RestartConfirmation/margins/vbox/buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Yes"

[node name="no" type="Button" parent="RestartConfirmation/margins/vbox/buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "No"

[node name="Networking" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_6dxgx")

[node name="Server" type="Node" parent="Networking"]
unique_name_in_owner = true
script = ExtResource("3_xgba2")

[node name="Client" type="Node" parent="Networking" node_paths=PackedStringArray("main")]
unique_name_in_owner = true
script = ExtResource("4_jies1")
main = NodePath("../..")

[node name="Game" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_yweq4")

[node name="labels" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -104.0
offset_top = 39.0
offset_right = 109.0
offset_bottom = 87.0
grow_horizontal = 2
theme_override_constants/separation = 0

[node name="display" type="Label" parent="labels"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = SubResource("1")
text = "X's turn."
horizontal_alignment = 1
uppercase = true
metadata/_edit_lock_ = true

[node name="hint" type="Label" parent="labels"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = SubResource("2")
text = "Click on any cell on the board."
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="Board" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6")
script = ExtResource("1")
BOARD_SIZE = Vector2(400, 400)
CELL_SIZE = Vector2(129.333, 129.333)

[node name="restart" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -49.5
offset_top = -85.0
offset_right = 49.5
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("6")
text = "RESTART"

[node name="canvas" type="CanvasLayer" parent="."]

[node name="Strike" type="Node2D" parent="canvas"]
unique_name_in_owner = true
script = ExtResource("5")
theme = ExtResource("6")
overshoot = 15

[connection signal="game_completed" from="Board" to="." method="_on_game_completed"]
[connection signal="game_tied" from="Board" to="." method="_on_game_tied"]
[connection signal="game_won" from="Board" to="." method="_on_game_won"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
